adding pubsub features
