# internal/gen/user/v1/user.pb.validate.go
@@ -1436,6 +1436,8 @@ func (m *User) validate(all bool) error {
 
 	// no validation rules for Id
 
+	// no validation rules for Password
+
 	if len(errors) > 0 {
 		return UserMultiError(errors)
 	}
